<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="26dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ResetPasswordActivity">

    <TextView
        android:id="@+id/textViewResetPasswordLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="32sp"
        android:layout_margin="8dp"
        />

    <EditText
        android:id="@+id/editTextResetEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reset_email_hint"
        android:inputType="textEmailAddress"
        android:layout_margin="8dp"
/>

    <Button
        android:id="@+id/buttonResetEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_reset_password_label"
        android:layout_margin="8dp"
 />
</LinearLayout>